tests/fail/autoref_on_deref.stderr
error: operation `Deref` does not support autoref
 --> $DIR/autoref_on_deref.rs:6:11
  |
6 | #[impl_op(autoref)]
  |           ^^^^^^^
